Fixes background image display on mobiles.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,8 +17,9 @@
 }
 
 html {
-  background: url('../images/bg-sky.jpg') no-repeat center center fixed;
+  background: #013a80 url(../images/bg-sky.jpg) no-repeat fixed center right;
   background-size: cover;
+  height: 100%;
 }
 
 body{
